# superinstance-wiki

./: .gitignore  .msgtmp  ADOPTION-STRATEGY.md  AGENT-PIPELINE-ARCHITECTURE.md  AGENT.md  ARCHAEOLOGY-FIVE-PASSES.md  BETA_TEST_PLAN.md  CATALOG.md  CCC-AUTONOMY-PROTOCOL-2026-05-05.md  CHANGELOG.md  CLEANUP.md  COMPACT_STATE.md  CONSTITUTIVE-COMPUTATION.md  CONSTRUCT-SPEC.md  CONTRIBUTING.md  DASHBOARD.md  DEPENDENCIES.md  DESIGN-RATIONALE.md  ECOSYSTEM-SYNERGY-MAP.md  EFFICIENCY.md  FLUX-EMSOFT-DEEP-RESEARCH-2026-05-04.md  FLUX-EMSOFT-EXECUTIVE-SUMMARY-2026-05-05.md  FULL-ECOSYSTEM-SYNERGY.md  GPU_DISPATCH_ARCHITECTURE.md  KIMI-GPU-DISPATCH-ARCHITECTURE.md  KIMI-MATH-GRAND-SYNTHESIS.md  MANIFEST.md  MEMORY.md  METRICS-DASHBOARD.md  Makefile  ONBOARDING.md  OPUS-CATEGORICAL-DEATH-REBIRTH.md  OPUS-CUDACLAW-QUANTUM-TOPOLOGY.md  OPUS-EMERGENT-THEOREMS.md  OPUS-UNIFIED-OBJECT.md  OVERNIGHT-STATUS.txt  PROGRAMMATIC-ACCESS.md  README.md  RESOLVENT-LEVERAGE-THEOREM.md  REVERSE-ACTUALIZATION.md  (+47 more)
CHRONICLE/: ERA--1-PRE-FLEET.md  ERA-0-SEED.md  ERA-1-EQUIPMENT.md  ERA-2-FLEET-AWAKENS.md  ERA-3-CAMBRIAN-EXPLOSION.md  ERA-4-THE-MESH.md  FORKS.md  MASTER.md  SCAFFOLD-WAVE.md  VECTORS.md
INDEXES/: CHRONOLOGY-BY-MONTH.md  COMPLETENESS-TIER.md  CONCEPTS.md  FLEET-RELEVANCE.md  LANGUAGE.md  LIFECYCLE-STAGE.md  MASTER-INDEX.md  REALM.md  STRATEGIC-ACTION.md  TOPIC.md  TYPE.md
ai-writings/: .markdownlint.json  IDEATIONS-2026-05-25.md  INDEX-2026-05-25.md  INDEX-2026-06-07.md  Makefile  README.md  THE_CONSERVATION_OF_CULTURE.md  THE_POLYGLOT_FUNCTOR.md  THE_SELF_IMPROVING_FIXED_POINT.md  (+27 more)
(+285 files in other folders)
