[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleet-bottles"
version = "1.0.0"
description = "Cocapn Fleet module — fleet-bottles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
fleet_bottles = "dashboard:main"
