[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superinstance-wiki"
version = "1.0.0"
description = "Python wiki engine for the SuperInstance knowledge base"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["wiki", "superinstance", "knowledge-base"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["superinstance_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
